tests/negative/yield_outside_generator.xs
-- EXPECT_ERROR: S0040
fn f() {
    yield 1
}
